--- a/web_site/journal.html
+++ b/web_site/journal.html
@@ -11,12 +11,18 @@
 	<link rel="stylesheet" type="text/css" href="journal_layout.css" title="style" />
 </head>
 
-<body>
-
-	<h1>Victoria's Journal</h1>
-	<h2>So fresh and so clean</h2>
-
-	<h2>04/09/08: Spatulas</h2>
+<body><div id="block"><h1>Friends</h1>
+<ul>
+<li><a href="http://www.cs.washington.edu/education/courses/cse190m/CurrentQtr/staff.shtml">190m Buddies</a></li>
+<li><a href="http://www.willsmith.net/">Big Will</a></li>
+<li><a href="http://youtube.com/watch?v=mZHoHaAYHq8" title="Conan the Librarian">Conan the Librarian</a></li>
+</ul></div>
+<div id="a";>
+	<h1 >Victoria's Journal</h1>
+	<h2 class="one">So fresh and so clean</h2>
+</div>
+<div class="cc">
+	<h2 class="date">04/09/08: Spatulas</h2>
 	<p>
 		<img src="images/spatula.gif" alt="Much-needed spatula" />
 	</p>
@@ -24,8 +30,9 @@
 	<p>
 		Yesterday I went to the store and got some much-needed <a href="http://www.youtube.com/watch?v=2XbCWmY0eqY">spatulas</a>! (What better way to say I love myself than to buy myself a spatula?)
 	</p>
-
-	<h2>04/08/08: Cookie Monster Cupcakes</h2>
+</div>
+<div class="cc">
+	<h2 class="date">04/08/08: Cookie Monster Cupcakes</h2>
 	<p>
 		<img src="images/cookiemonster.jpg" alt="Cookie Monster: in cupcake form!" />
 	</p>
@@ -37,7 +44,7 @@
 	<p>
 		Did you know? Cookie Monster once said, <q>Sometimes me think what is love, and then me think love is what last cookie is for. Me give up the last cookie for you.</q> I wonder if the same applies for cupcakes? (If so, I don't think I can ever love ANYONE!)
 	</p>
-	
+	</div>
 </body>
 
 </html>
